box-shadow effect fix after adding scrollbar

--- a/src/poc-shadcn/components/table.css
+++ b/src/poc-shadcn/components/table.css
@@ -37,10 +37,14 @@ thead, td {
 }
 
 table {
-  box-shadow: -16px 11px 15px 4px rgba(0,0,0,0.1);
-  border-radius: 9px;
+  /* box-shadow: -16px 11px 15px 4px rgba(0,0,0,0.1); */
+  /* border-radius: 9px; */
   border: none;
   outline: unset;
+}
+
+.box-shadow-custom{
+  box-shadow: -16px 11px 15px 4px rgba(0,0,0,0.1);
 }
 
 table tbody tr td:last-child{
@@ -56,6 +60,33 @@ table tbody tr:last-child td:last-child {
 }
 
 table thead tr th:last-child {
-  border-right:  unset !important;
+  /* border-right:  unset !important; */
   /* box-shadow: 1px 2px 5px 5px rgba(0,0,0,0.1); */
+}
+
+table thead tr th:first-child {
+  box-shadow: 1px 2px 5px 5px rgba(0,0,0,0.1);
+}
+
+.table-container::-webkit-scrollbar {
+  display: none;
+}
+
+.table-container:hover::-webkit-scrollbar {
+  display: block;
+  height: 5px;
+}
+.table-container::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 6px rgba(0,0,0,0.1); */
+  /* background-color: #F5F5F5; */
+  /* border-radius: 10px; */
+}
+.table-container::-webkit-scrollbar-thumb {
+  background: linear-gradient(45deg, orange, darksalmon);
+  border-radius: 10px;
+  width: 6px;
+}
+
+.table-container {
+
 }
